--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,7 @@ all = ["depth-anything-3[app,gs]"]
 
 
 [project.scripts]
-da3 = "depth_anything_3.cli:app"
+da3 = "projects.mmdet3d_plugin.models.depth_anything_3.cli:app"
 
 [project.urls]
 Homepage = "https://github.com/ByteDance-Seed/Depth-Anything-3"
@@ -56,12 +56,14 @@ Homepage = "https://github.com/ByteDance-Seed/Depth-Anything-3"
 source = "vcs"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/depth_anything_3"]
+packages = [
+  "projects/mmdet3d_plugin/models/depth_anything_3",
+]
 
 [tool.hatch.build.targets.sdist]
 include = [
   "/pyproject.toml",
-  "/src/depth_anything_3",
+  "/projects/mmdet3d_plugin/models/depth_anything_3",
 ]
 
 [tool.hatch.metadata]
