Update .gitignore to include additional file types for build artifacts and update binary point cloud file to reflect recent changes.

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,19 @@ data/
 # Large model files
 *.pkl
 *.pickle
+
+
+# .so files
+*.so
+*.dylib
+*.dll
+*.lib
+*.a
+*.o
+*.obj
+*.res
+*.exp
+*.def
+*.manifest
+*.manifest.in
+*.manifest.in.in
