--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,7 @@ all = ["depth-anything-3[app,gs]"]
 
 
 [project.scripts]
-da3 = "projects.mmdet3d_plugin.models.depth_anything_3.cli:app"
+da3 = "projects.mmdet3d_plugin.models.backbone.depth_anything_3.cli:app"
 
 [project.urls]
 Homepage = "https://github.com/ByteDance-Seed/Depth-Anything-3"
@@ -57,13 +57,13 @@ source = "vcs"
 
 [tool.hatch.build.targets.wheel]
 packages = [
-  "projects/mmdet3d_plugin/models/depth_anything_3",
+  "projects/mmdet3d_plugin/models/backbone/depth_anything_3",
 ]
 
 [tool.hatch.build.targets.sdist]
 include = [
   "/pyproject.toml",
-  "/projects/mmdet3d_plugin/models/depth_anything_3",
+  "/projects/mmdet3d_plugin/models/backbone/depth_anything_3",
 ]
 
 [tool.hatch.metadata]
