--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,8 @@ ckpts/
 result/
 results/
 outputs/
+work_dirs/
+runs/
 
 # Data directories
 data/
@@ -79,3 +81,4 @@ data/
 *.manifest
 *.manifest.in
 *.manifest.in.in
+
